tests/snapshots/keys__insta_keys_tab.snap
---
source: tests/keys.rs
expression: h.buffer_view()
---
"  22                                                                            "
"  21                                                                            "
"  20                                                                            "
"  19                                                                            "
"  18                                                                            "
"  17                                                                            "
"  16                                                                            "
"  15                                                                            "
"  14                                                                            "
"  13                                                                            "
"  12                                                                            "
"  11                                                                            "
"  10                                                                            "
"  9                                                                             "
"  8                                                                             "
"  7                                                                             "
"  6                                                                             "
"  5                                                                             "
"  4                                                                             "
"  3                                                                             "
"  2                                                                             "
"> 1                                                                             "
"  100000/100000                                                              0/0"
">                                                                               "
