tests/snapshots/keys__keys_alt_b@002.snap
---
source: tests/keys.rs
description: "input: items [\"\"]\noptions: -q foo bar foo-bar\nafter:\n  @alt 'b'\n  @char '|'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  0/1                                                                        0/0"
"> foo bar foo-|bar                                                              "
cursor: (24, 16)
